change actor form name add edit-movies page

--- a/views/actors.hbs
+++ b/views/actors.hbs
@@ -47,7 +47,7 @@
 
         <h2>Add a new actor to the database</h2>
         <p>To add a new actor, please enter their information below and click `Submit`!</p>
-        <form id="add-person-form" method="POST" action="/add-person-form">
+        <form id="add-actor-form" method="POST" action="/add-actor-form">
             <label for="input-fname">First Name: </label>
             <input type="text" name="input-fname" id="input-fname">
             
