build edit_movies page **Does not work yet**

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,6 +9,6 @@
       <li><a href="/users">Users</a></li>
       <li><a href="/genres">Genres</a></li>
       <li><a href="/age_ratings">AgeRating</a></li>
-      <li><a href="/edit_movie">Edit Movies</a></li>
+      <li><a href="/edit_movies">Edit Movies</a></li>
     </ul>
   </nav>
