--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <meta charset="utf-8">
     <style>
         body {       
