--- a/views/actors.hbs
+++ b/views/actors.hbs
@@ -1,10 +1,10 @@
 <h1>This is the Actors page</h1>
 <p>All actors currently in the database are listed below.</p>
 
-{{!-- The Data from our Database --}}
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 {{!-- Create a table --}}
-<table>
+<table id="actor-table">
 
     {{!-- Header section --}}
     <thead>
@@ -27,7 +27,7 @@
         {{!-- For each row, print the id, first name, last name, and birthdate, in order --}}
         {{#each data}}
 
-        <tr>
+        <tr data-value={{this.actor_id}}>
             <td>{{this.actor_id}}</td>
             <td>{{this.first_name}}</td>
             <td>{{this.last_name}}</td>
@@ -43,19 +43,44 @@
 </table>
 
 
-        <br>
+<br>
 
-        <h2>Add a new actor to the database</h2>
-        <p>To add a new actor, please enter their information below and click `Submit`!</p>
-        <form id="add-actor-form" method="POST" action="/add-actor-form">
-            <label for="input-fname">First Name: </label>
-            <input type="text" name="input-fname" id="input-fname">
-            
-            <label for="input-lname">Last Name: </label>
-            <input type="text" name="input-lname" id="input-lname">
+<h2>Add a new actor to the database</h2>
+<p>To add a new actor, please enter their information below and click `Submit`!</p>
+<form id="add-actor-form" method="POST" action="/add-actor-form">
+    <label for="input-fname">First Name: </label>
+    <input type="text" name="input-fname" id="input-fname">
 
-            <label for="input-age">Birthdate: </label>
-            <input type="date" name="input-birthdate" id="input-birth-date">
+    <label for="input-lname">Last Name: </label>
+    <input type="text" name="input-lname" id="input-lname">
 
-            <input type="submit">
-        </form>
+    <label for="input-age">Birthdate: </label>
+    <input type="date" name="input-birthdate" id="input-birth-date">
+
+    <input type="submit">
+</form>
+
+{{!-- Update actor --}}
+
+<h2>Update Actor</h2>
+<p>Please select from the drop down of the desired Actor you would like to update</p>
+<form id="update-actor-form-ajax">
+
+    <label for="input-fullname">Full name: </label>
+    <select name="input-fullname" id="mySelect">
+        <option value="test">Select an Actor</option>
+        {{#each data}}
+        <option value="{{this.actor_id}}">{{this.first_name}} {{this.last_name}}</option>
+        {{/each}}
+    </select>
+
+
+    <label for="input-birthdate-update">Birthdate: </label>
+
+    <input type="date" name="input-birthdate-update" id="input-birthdate-update"></input>
+
+    <input type="submit">
+
+</form>
+
+<script src="/public/js/update_person.js"></script>
