add CREATE for AgeRatings

--- a/views/age_ratings.hbs
+++ b/views/age_ratings.hbs
@@ -38,3 +38,16 @@
         {{/each}}
     </tbody>
 </table>
+
+<br>
+
+<h2>Add a new age rating to the database</h2>
+
+<p>To add a new age rating, please enter the description below and click `Submit`!</p>
+
+<form id="/add-age-rating-form" method="POST" action="/add-age-rating-form">
+    <label for="input-age-rating">Age Rating Description: </label>
+    <input type="text" name="input-age-rating" id="input-age-rating">
+
+    <input type="submit">
+</form>
