--- a/views/users.hbs
+++ b/views/users.hbs
@@ -24,7 +24,7 @@
     {{!-- Body section --}}
     <tbody>
 
-        {{!-- For each row, print the id, first name, last name, and birthdate, in order --}}
+        {{!-- For each row, print the id, email, and phone in order --}}
         {{#each data}}
 
         <tr>
@@ -39,3 +39,19 @@
         {{/each}}
     </tbody>
 </table>
+
+<br>
+
+<h2>Add a new user to the database</h2>
+
+<p>To add a new user, please enter the information below and click `Submit`!</p>
+
+<form id="/add-user-form" method="POST" action="/add-user-form">
+    <label for="input-email">E-mail Address: </label>
+    <input type="text" name="input-email" id="input-email">
+
+    <label for="input-phone">Phone Number: </label>
+    <input type="text" name="input-phone" id="input-phone">
+
+    <input type="submit">
+</form>
