--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,5 +10,8 @@
       <li><a href="/genres">Genres</a></li>
       <li><a href="/age_ratings">AgeRating</a></li>
       <li><a href="/edit_movies">Edit Movies</a></li>
+      <li><a href="/movie_actors">MovieActors (Read Only)</a></li>
+      <li><a href="/movie_moods">MovieMoods (Read Only)</a></li>
+      <li><a href="/movie_genres">MovieGenres (Read Only)</a></li>
     </ul>
   </nav>
