--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,5 +13,6 @@
       <li><a href="/movie_actors">MovieActors (Read Only)</a></li>
       <li><a href="/movie_moods">MovieMoods (Read Only)</a></li>
       <li><a href="/movie_genres">MovieGenres (Read Only)</a></li>
+      <li><a href="/user_movies">UserMovies (Read Only)</a></li>
     </ul>
   </nav>
