fix typo in add actor birthdate

--- a/views/actors.hbs
+++ b/views/actors.hbs
@@ -59,7 +59,7 @@
     <input type="text" name="input-lname" id="input-lname">
 
     <label for="input-age">Birthdate: </label>
-    <input type="date" name="input-birthdate" id="input-birth-date">
+    <input type="date" name="input-birthdate" id="input-birthdate">
 
     <input type="submit">
 </form>
