--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,60 +1,70 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <meta charset="utf-8">
-    <style>
-        body {       
-  color:darkblue;
-  background-color: lightgrey;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 2em ;
-  font-weight: 500;
-  margin: 50px;
-  padding: 100px;
-  text-align: center;
-}
-        table {
-  margin: auto;
-  border-collapse: collapse;
-  border: 2px solid darkblue;
-}
-caption {
-  font-weight: bold;
-  font-size: 1.3em;
-  color: darkblue;
-}
-thead {
-  font-size: 1.1em;
-  background-color: cadetblue;
-}
-tr {
-  border: 2px solid darkblue;
-  padding: 10px;
-}
-  tr:nth-child(even) {
-    background-color: rgb(230,220,200);
-  }
-th {
-  border: 2px solid darkblue;
-  padding: 15px;
-}
-td {
-  text-align: center;
-  padding-left: 5px;
-  padding-right: 5px;
-  border: 2px solid darkblue;
-}
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <meta charset="utf-8">
+  <style>
+    body {
+      color: darkblue;
+      background-color: lightgrey;
+      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      font-size: 2em;
+      font-weight: 500;
+      margin: 50px;
+      padding: 100px;
+      text-align: center;
+    }
+
+    table {
+      margin: auto;
+      border-collapse: collapse;
+      border: 2px solid darkblue;
+    }
+
+    caption {
+      font-weight: bold;
+      font-size: 1.3em;
+      color: darkblue;
+    }
+
+    thead {
+      font-size: 1.1em;
+      background-color: cadetblue;
+    }
+
+    tr {
+      border: 2px solid darkblue;
+      padding: 10px;
+    }
+
+    tr:nth-child(even) {
+      background-color: rgb(230, 220, 200);
+    }
+
+    th {
+      border: 2px solid darkblue;
+      padding: 15px;
+    }
+
+    td {
+      text-align: center;
+      padding-left: 5px;
+      padding-right: 5px;
+      border: 2px solid darkblue;
+    }
   </style>
 
-    <title>Film Finder</title>
+  <title>Film Finder</title>
 </head>
+
 <body>
 
-    {{{body}}}
-    
-    <br>
-    <br>
-    <a href="/">Return to Home Page</a>
+  {{{body}}}
+
+  <br>
+  <br>
+  <a href="/">Return to Home Page</a>
 </body>
+
 </html>
