--- a/views/moods.hbs
+++ b/views/moods.hbs
@@ -2,7 +2,20 @@
 <p>All registered Users of the site are listed below.</p>
 
 {{!-- The Data from our Database --}}
-
+<nav>
+    <ul style="list-style-type: none">
+        <li><a href="/actors">Actors</a></li>
+        <li><a href="/movies">Movies</a></li>
+        <li><a href="/users">Users</a></li>
+        <li><a href="/genres">Genres</a></li>
+        <li><a href="/age_ratings">AgeRating</a></li>
+        <li><a href="/edit_movies">Edit Movies</a></li>
+        <li><a href="/movie_actors">MovieActors (Read Only)</a></li>
+        <li><a href="/movie_moods">MovieMoods (Read Only)</a></li>
+        <li><a href="/movie_genres">MovieGenres (Read Only)</a></li>
+        <li><a href="/user_movies">UserMovies (Read Only)</a></li>
+    </ul>
+</nav>
 {{!-- Create a table --}}
 <table>
 
