--- a/views/actors.hbs
+++ b/views/actors.hbs
@@ -2,6 +2,20 @@
 <p>All actors currently in the database are listed below.</p>
 
 {{!-- The Data from our Database --}}
+<nav>
+    <ul style="list-style-type: none">
+        <li><a href="/moods">Moods</a></li>
+        <li><a href="/movies">Movies</a></li>
+        <li><a href="/users">Users</a></li>
+        <li><a href="/genres">Genres</a></li>
+        <li><a href="/age_ratings">AgeRating</a></li>
+        <li><a href="/edit_movies">Edit Movies</a></li>
+        <li><a href="/movie_actors">MovieActors (Read Only)</a></li>
+        <li><a href="/movie_moods">MovieMoods (Read Only)</a></li>
+        <li><a href="/movie_genres">MovieGenres (Read Only)</a></li>
+        <li><a href="/user_movies">UserMovies (Read Only)</a></li>
+    </ul>
+</nav>
 
 {{!-- Create a table --}}
 <table id="actor-table">
@@ -35,7 +49,7 @@
             <td>
                 <button id="edit-actor">Edit</button>
                 <button id="delete-actor" onclick="deleteActor({{this.actor_id}})">Delete</button>
-                
+
             </td>
         </tr>
         {{/each}}
@@ -59,7 +73,7 @@
     <input type="text" name="input-lname" id="input-lname">
 
     <label for="input-age">Birthdate: </label>
-    <input type="date" name="input-birthdate" id="input-birthdate">
+    <input type="date" name='input-birthdate' id='input-birthdate'>
 
     <input type="submit">
 </form>
