--- a/views/age_ratings.hbs
+++ b/views/age_ratings.hbs
@@ -2,6 +2,20 @@
 <p>All Age Ratings currently in the database are listed below.</p>
 
 {{!-- The Data from our Database --}}
+<nav>
+    <ul style="list-style-type: none">
+        <li><a href="/actors">Actors</a></li>
+        <li><a href="/moods">Moods</a></li>
+        <li><a href="/movies">Movies</a></li>
+        <li><a href="/users">Users</a></li>
+        <li><a href="/genres">Genres</a></li>
+        <li><a href="/edit_movies">Edit Movies</a></li>
+        <li><a href="/movie_actors">MovieActors (Read Only)</a></li>
+        <li><a href="/movie_moods">MovieMoods (Read Only)</a></li>
+        <li><a href="/movie_genres">MovieGenres (Read Only)</a></li>
+        <li><a href="/user_movies">UserMovies (Read Only)</a></li>
+    </ul>
+</nav>
 
 {{!-- Create a table --}}
 <table>
