--- a/views/movie_moods.hbs
+++ b/views/movie_moods.hbs
@@ -1,7 +1,22 @@
+<nav>
+    <ul style="list-style-type: none">
+        <li><a href="/actors">Actors</a></li>
+        <li><a href="/moods">Moods</a></li>
+        <li><a href="/movies">Movies</a></li>
+        <li><a href="/users">Users</a></li>
+        <li><a href="/genres">Genres</a></li>
+        <li><a href="/age_ratings">AgeRating</a></li>
+        <li><a href="/edit_movies">Edit Movies</a></li>
+        <li><a href="/movie_actors">MovieActors (Read Only)</a></li>
+        <li><a href="/movie_genres">MovieGenres (Read Only)</a></li>
+        <li><a href="/user_movies">UserMovies (Read Only)</a></li>
+    </ul>
+</nav>
 <h1>MovieMoods</h1>
+
 <p>
     This page displays the MovieMoods intersection table. No direct editing of this table is allowed, but
-    it is available to view in order to help track down any potential issues. All changes to Movie/Mood 
+    it is available to view in order to help track down any potential issues. All changes to Movie/Mood
     relationships should be done through the Edit Movies page.
 </p>
 
