--- a/views/user_movies.hbs
+++ b/views/user_movies.hbs
@@ -1,7 +1,21 @@
+<nav>
+    <ul style="list-style-type: none">
+        <li><a href="/actors">Actors</a></li>
+        <li><a href="/moods">Moods</a></li>
+        <li><a href="/movies">Movies</a></li>
+        <li><a href="/users">Users</a></li>
+        <li><a href="/genres">Genres</a></li>
+        <li><a href="/age_ratings">AgeRating</a></li>
+        <li><a href="/edit_movies">Edit Movies</a></li>
+        <li><a href="/movie_actors">MovieActors (Read Only)</a></li>
+        <li><a href="/movie_moods">MovieMoods (Read Only)</a></li>
+        <li><a href="/movie_genres">MovieGenres (Read Only)</a></li>
+    </ul>
+</nav>
 <h1>UserMovies</h1>
 <p>
     This page displays the UserMovies intersection table. No direct editing of this table is allowed, but
-    it is available to view in order to help track down any potential issues. All changes to User/Movie 
+    it is available to view in order to help track down any potential issues. All changes to User/Movie
     relationships should be done through the Movie History page.
 </p>
 
@@ -37,4 +51,3 @@
         {{/each}}
     </tbody>
 </table>
-
