--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -53,6 +53,44 @@
       padding-right: 5px;
       border: 2px solid darkblue;
     }
+
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #333;
+      color: #fff;
+      height: 80px;
+    }
+
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav li {
+      display: inline-block;
+      margin-right: 20px;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      padding: 10px;
+      font-size: 20px;
+    }
+
+    .content {
+      margin-top: 70px;
+      padding: 20px;
+    }
+
+    nav a:hover {
+      background-color: whitesmoke;
+      color: #333;
+    }
   </style>
 
   <title>Film Finder</title>
