Fixed <h2> tag and added a title for our page.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,6 @@
-<h1>This is the Home page</h1>
-<p>Select the table you would like to view or edit below.</p>
+<h1>Film Finder</h1>
+<h2>This is the Home page</h1>
+  <p>Select the links above you would like to view or edit.</p>
 
   <nav>
     <ul style="list-style-type: none">
