--- a/views/movie_relationships.hbs
+++ b/views/movie_relationships.hbs
@@ -24,7 +24,7 @@
     {{!-- Body section --}}
     <tbody>
 
-        {{!-- For each row, print the id, title, year, and age rating in order --}}
+        {{!-- For each row, print the first name and last name --}}
         {{#each actor}}
         <tr>
             <td>{{this.first_name}}</td>
@@ -64,7 +64,7 @@
     {{!-- Body section --}}
     <tbody>
 
-        {{!-- For each row, print the id, title, year, and age rating in order --}}
+        {{!-- For each row, print the genre --}}
         {{#each genre}}
         <tr>
             <td>{{this.genre_name}}</td>
@@ -104,7 +104,7 @@
     {{!-- Body section --}}
     <tbody>
 
-        {{!-- For each row, print the id, title, year, and age rating in order --}}
+        {{!-- For each row, print the mood --}}
         {{#each mood}}
         <tr>
             <td>{{this.mood_name}}</td>
