--- a/views/movie_relationships.hbs
+++ b/views/movie_relationships.hbs
@@ -1,10 +1,10 @@
 <h1>This is the Movie Relationships page for Movie {{this.movie}}</h1>
-<p>All Actors associated with the movie are listed below.</p>
 
 {{!-- The Data from our Database --}}
 
 {{!-- Create a table --}}
-<table>
+<label for="actors-table">Actors associated with this movie</label>
+<table id="actors-table">
 
     {{!-- Header section --}}
     <thead>
@@ -39,12 +39,12 @@
 
 <br>
 
-<p>All Genres associated with the movie are listed below.</p>
 
 {{!-- The Data from our Database --}}
 
 {{!-- Create a table --}}
-<table>
+<label for="genres-table">Genres are associated with this movie</label>
+<table id="genres-table">
 
     {{!-- Header section --}}
     <thead>
@@ -81,10 +81,9 @@
 
 {{!-- The Data from our Database --}}
 
-<p>All Moods associated with the movie are listed below.</p>
-
 {{!-- Create a table --}}
-<table>
+<label for="moods-table">Moods associated with this movie</label>
+<table id="moods-table">
 
     {{!-- Header section --}}
     <thead>
