--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -88,7 +88,7 @@
     <label for="search-movie">Movie Title: </label>
     <select name="search-movie" id="search-movie">
         {{#each data}}
-        <option value="{{this.movie_id}}">{{this.movie_title}}</option>
+        <option value="{{this.movie_title}}">{{this.movie_title}}</option>
         {{/each}}
     </select>
 
