--- a/views/movie_relationships.hbs
+++ b/views/movie_relationships.hbs
@@ -41,8 +41,9 @@
 <label for="movie-add-actor-form">Add an Actor to this Movie</label>
 
 <form id="movie-add-actor-form" method="POST" action="/movie-add-actor-form">
-    <label for="input-actor-name">Actor: </label>
-    <select name="input-actor-name" id="input-actor-name">
+    <label for="input-actor">Actor: </label>
+    <input type="hidden" name="movie" value="{{this.movie}}">
+    <select name="input-actor" id="input-actor">
         {{#each add_actor}}
         <option value="{{this.actor_id}}">{{this.first_name}} {{this.last_name}}</option>
         {{/each}}
