--- a/views/movie_relationships.hbs
+++ b/views/movie_relationships.hbs
@@ -85,7 +85,6 @@
                 {{@key}}
             </th>
             {{/each}}
-            <th>Modify</th>
         </tr>
     </thead>
 
@@ -96,9 +95,6 @@
         {{#each genre}}
         <tr>
             <td>{{this.genre_name}}</td>
-            <td>
-                <button>Remove</button>
-            </td>
         </tr>
         {{/each}}
     </tbody>
@@ -156,7 +152,6 @@
                 {{@key}}
             </th>
             {{/each}}
-            <th>Modify</th>
         </tr>
     </thead>
 
@@ -167,19 +162,16 @@
         {{#each mood}}
         <tr>
             <td>{{this.mood_name}}</td>
-            <td>
-                <button>Remove</button>
-            </td>
         </tr>
         {{/each}}
     </tbody>
 </table>
 
 <fieldset>
-<label for="movie-add-mood-form">Add an Mood to this Movie</label>
-
+<label for="movie-add-mood-form">Add a Mood to this Movie</label>
 <form id="movie-add-mood-form" method="POST" action="/movie-add-mood-form">
     <label for="input-mood">Mood: </label>
+    <input type="hidden" name="movie" value="{{this.movie}}">
     <select name="input-mood" id="input-mood">
         {{#each add_mood}}
         <option value="{{this.mood_id}}">{{this.mood_name}}</option>
@@ -187,5 +179,20 @@
     </select>
 
     <input type="submit" value="Add Mood to Movie">
+</form>
+
+<br>
+
+<label for="movie-remove-mood-form">Remove a Mood from this Movie</label>
+<form id="movie-remove-mood-form" method="POST" action="/movie-remove-mood-form">
+    <label for="remove-mood">Mood: </label>
+    <input type="hidden" name="movie" value="{{this.movie}}">
+    <select name="remove-mood" id="remove-mood">
+        {{#each mood}}
+        <option>{{this.mood_name}}</option>
+        {{/each}}
+    </select>
+
+    <input type="submit" value="Remove Mood from Movie">
 </form>
 </fieldset>
