--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -45,8 +45,16 @@
             <td>{{this.movie_year}}</td>
             <td>{{this.age_rating_id}}</td>
             <td>
-                <button>Edit</button>
-                <button>Delete</button>
+                <fieldset class="modify">
+                <form id="edit-movie-form" method="POST" action="/edit-movie-form">
+                    <input type="hidden" name="movie" value="{{this.movie_id}}">
+                    <input type="submit" value="Edit">
+                </form>
+                <form>
+                    <input type="hidden" name = "movie" value="{{this.movie_id}}">
+                    <input type="button" value="Delete">
+                </form>
+                </fieldset>
             </td>
         </tr>
         {{/each}}
