minor formatting change on relationship page

--- a/views/movie_relationships.hbs
+++ b/views/movie_relationships.hbs
@@ -3,7 +3,7 @@
 {{!-- The Data from our Database --}}
 
 {{!-- Create a table --}}
-<label for="actors-table">Actors associated with this {{this.movie}}</label>
+<label for="actors-table">Actors associated with {{this.movie}}</label>
 <table id="actors-table">
 
     {{!-- Header section --}}
