--- a/views/users.hbs
+++ b/views/users.hbs
@@ -82,15 +82,19 @@
 
 <p>To add a new user, please enter the information below and click `Submit`!</p>
 
-<form id="/add-user-form" method="POST" action="/add-user-form">
-    <label for="input-email">E-mail Address: </label>
-    <input type="text" name="input-email" id="input-email">
+<fieldset class="fields">
+    <form id="/add-user-form" method="POST" action="/add-user-form">
+        <label for="input-email">E-mail Address: </label>
+        <input type="text" name="input-email" id="input-email">
 
-    <label for="input-phone">Phone Number: </label>
-    <input type="text" name="input-phone" id="input-phone">
+        <label for="input-phone">Phone Number: </label>
+        <input type="text" name="input-phone" id="input-phone">
 
-    <input type="submit">
-</form>
+        <input type="submit">
+    </form>
+</fieldset>
+
+<br>
 
 <h2>Updating A User's Email and Phone number</h2>
 <p>To update a specific user's enter in the information below</p>
@@ -99,7 +103,12 @@
     <fieldset class="fields">
 
         <label for="input-update-user-id">User ID: </label>
-        <input type="text" name="input-update-user-id" id="input-update-user-id">
+
+        <select name="input-update-user-id" id="input-update-user-id">
+            {{#each data}}
+            <option value="{{this.user_id}}">{{this.user_id}}</option>
+            {{/each}}
+        </select>
 
         <label for="input-update-email">Email: </label>
         <input type="text" name="input-update-email" id="input-update-email">
